fix: overflow

--- a/client/src/styles/components/navbar.module.css
+++ b/client/src/styles/components/navbar.module.css
@@ -85,6 +85,7 @@ html,body{
  
 
   .navbarDesktop {
+
     visibility: collapse;
   }
   .mobileTopBar{
@@ -92,6 +93,7 @@ html,body{
     visibility: visible;
   }
   .bottomNavigation{
+    width: 80% !important;
     visibility: visible;    
   }
 }
