--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -20,15 +20,28 @@
     margin-left:"auto";
     margin-right:"auto";
     margin: 0;
-    padding: 0%;
     text-decoration: none;
-    overflow-x: hidden !important;
 
-}
-html,body{
-  overflow-x: hidden !important;
 }
 
 .page{
   width: 85%;
+}
+
+
+@media screen and (min-width: 480px)  {
+
+  * {
+    overflow: hidden !important;
+
+}
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden !important; 
+}
+
 }
